# Final-Project-386

./: .gitignore  CLAUDE.md  README.md  analysis.html  data_collection.py  earnings_dates.csv  etf_holdings.csv  finalProject.ipynb  final_project.ipynb  index.html  options_chain.csv  options_chain.ipynb  options_filtered.csv  options_with_spot.csv  price_history.csv  put_call_ratios.csv  pyproject.toml  report.html  requirements.txt  robots.txt  search.json  sitemap.xml  streamlit_app.py  test_etf_iv.py  tutorial.html
.github/workflows/: publish.yml
api/: etf_iv.html
docs/: _quarto.yml  index.html  index.qmd  report.md  tutorial.md  tutorial.qmd
docs/api/: index.html
docs/reference/: analysis.qmd  cleaning.qmd  collection.qmd  index.qmd  loaders.qmd
etf_iv/: __init__.py  analysis.py  cleaning.py  data_collection.py  sentiment.py
etf_iv/data/: __init__.py  earnings_dates.csv  etf_holdings.csv  etf_sentiment.csv  options_chain.csv  options_filtered.csv  options_with_spot.csv  price_history.csv
reference/: analysis.html  cleaning.html  collection.html  index.html  loaders.html
