[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etf-iv"
version = "0.1.0"
description = "ETF options, holdings, and news-sentiment analysis toolkit."
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Jillian Baker" }]
readme = "README.md"
dependencies = [
    "yfinance>=1.2",
    "pandas>=2.0",
    "numpy>=1.26",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "anthropic>=0.40",
]

[project.urls]
Repository = "https://github.com/jilliangbaker97/Final-Project-386"

[project.optional-dependencies]
dev = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyarrow>=15.0",
    "scipy>=1.14",
    "jupyter",
]

[tool.setuptools.packages.find]
include = ["etf_iv*"]

[tool.setuptools.package-data]
"etf_iv.data" = ["*.csv"]
